--- a/src/app/foundation-styles/base.css
+++ b/src/app/foundation-styles/base.css
@@ -42,6 +42,6 @@ body {
   transition:
     transform 0.3s ease,
     opacity 0.3s ease;
-  overflow-y: auto;
+  overflow: auto;
   display: block;
 }
